
Version 4.1.2 (04-03-12)
-Twitter Bar no longer requires Twitter for WordPress plugin.
-Unidentified index error fix for meta box code. 
-Added Romanian language files. 
-Updated screenshot. 
-Removed height: auto from objects in responsive style sheet. 
-Fixed bug with archive of an empty category.
-Adjusted "viewport" initial scale for full-width mobile device view. 

Version 4.1.1 (03-28-12)
-Updated missed Google Font library call for SSL support.
-Fixed strange quotes around HTML elements in Google +1 button code.
-Only enqueue Google +1 script if enabled in theme options.
-Fix for Facebook Like and Google +1 alignment on Single and Archive templates.
-Changed <!--more--> link text to "Read more…" when the_content() is used.
-Fixed several translation functions.
-Updated core.pot.

Version 4.1 (03-21-12)
-Clear fix for posts for non logged-in users.
-Re-added PressTrends with new opt-in only option. 
-Fix for Google +1 button.
-Updated core.pot
-Added Croatian translation files.

Version 4.0.9 (03-14-12)
-Added French translation files.
-CSS fix for search widget.
-zindex fix for fallback menu dropdowns.
-IE8 fix for featured images.
-Minor style and copy tweaks. 
-Removed some old images.

Version 4.0.8 (03-08-12)
-Removed PressTrends function.

Version 4.0.7 (03-07-12)
-Fixed typo in theme options panel.
-Fix for page titles.
-Updated Google Font Library call to be SSL friendly.
-Added browser specific HTML classes for IE CSS.
-Updated some theme copy. 
-CSS tweak for HTML tables to fix calendar widget bug.
-Added next/previous image paginiation for attachments. 

Version 4.0.6 (03-01-12)
-Additional margin fix for HTML tables.
-Updated Foundation CSS.
-Adjusted doctype. 
-Removed legacy icon margin option.
-CSS tweaks.
-Removed HTML comment before doctype call, fixes IE quirks mode issue. 
-Adjusted image upload preview style.

Version 4.0.5 (02-23-12)
-Fix for HTML tables.
-Added align:none option for featured images.